new method tested

--- a/poster/display_good_matches.ipynb
+++ b/poster/display_good_matches.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,11 +47,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "matches = pickle.load(open(\"good_matches.pkl\", \"rb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'USI1': 'mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB00010105317', 'USI2': 'mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB00010117740', 'Smiles1': 'COc1ccc(-c2coc3cc(OC)c(OC)cc3c2=O)cc1', 'Smiles2': 'COc1ccc(-c2coc3cc(OC)c(OC)cc3c2=O)cc1OC', 'score': array([0.92596108])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "samples = []\n",
+    "while (len(samples) < 6):\n",
+    "    i = np.random.randint(0, len(matches))\n",
+    "    if matches[i][0] < 0.8:\n",
+    "        continue\n",
+    "    m0, m1 = matches[i][1]\n",
+    "    myDict = {}\n",
+    "    myDict['USI1'] = hn.generate_usi(m0, library)\n",
+    "    myDict['USI2'] = hn.generate_usi(m1, library)\n",
+    "    myDict['Smiles1'] = data_dict_filtered[m0][\"Smiles\"]\n",
+    "    myDict['Smiles2'] = data_dict_filtered[m1][\"Smiles\"]\n",
+    "    myDict['score'] = matches[i][0]\n",
+    "    samples.append(myDict)\n",
+    "    # print(hn.generate_usi(m0, library), hn.generate_usi(m1, library), data_dict_filtered[m0][\"Smiles\"], data_dict_filtered[m1][\"Smiles\"])\n",
+    "\n",
+    "\n",
+    "\n",
+    "# print samples, add new line for each sample\n",
+    "print(samples[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>USI1</th>\n",
+       "      <th>Smiles1</th>\n",
+       "      <th>USI2</th>\n",
+       "      <th>Smiles2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...</td>\n",
+       "      <td>O=C(O)[C@@H]1CCC(O)=N1</td>\n",
+       "      <td>mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...</td>\n",
+       "      <td>CCOC(=O)C1CCC(O)=N1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...</td>\n",
+       "      <td>COc1cc(C(=O)O)ccc1O</td>\n",
+       "      <td>mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...</td>\n",
+       "      <td>CCOC(=O)c1ccc(O)c(OC)c1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...</td>\n",
+       "      <td>O=C(O)c1cc(O)c(O)c(O)c1</td>\n",
+       "      <td>mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...</td>\n",
+       "      <td>CCOC(=O)c1cc(O)c(O)c(O)c1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...</td>\n",
+       "      <td>COc1cc(C=O)ccc1O</td>\n",
+       "      <td>mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...</td>\n",
+       "      <td>COc1cc(C=O)ccc1OC(C)C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...</td>\n",
+       "      <td>COc1cc(C=O)ccc1O</td>\n",
+       "      <td>mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...</td>\n",
+       "      <td>CCCOc1ccc(C=O)cc1OC</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                USI1                  Smiles1  \\\n",
+       "0  mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...   O=C(O)[C@@H]1CCC(O)=N1   \n",
+       "1  mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...      COc1cc(C(=O)O)ccc1O   \n",
+       "2  mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...  O=C(O)c1cc(O)c(O)c(O)c1   \n",
+       "3  mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...         COc1cc(C=O)ccc1O   \n",
+       "4  mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...         COc1cc(C=O)ccc1O   \n",
+       "\n",
+       "                                                USI2  \\\n",
+       "0  mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...   \n",
+       "1  mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...   \n",
+       "2  mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...   \n",
+       "3  mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...   \n",
+       "4  mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB0001...   \n",
+       "\n",
+       "                     Smiles2  \n",
+       "0        CCOC(=O)C1CCC(O)=N1  \n",
+       "1    CCOC(=O)c1ccc(O)c(OC)c1  \n",
+       "2  CCOC(=O)c1cc(O)c(O)c(O)c1  \n",
+       "3      COc1cc(C=O)ccc1OC(C)C  \n",
+       "4        CCCOc1ccc(C=O)cc1OC  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myData = [{'USI1': 'mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB00010126753', 'USI2': 'mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB00010118619', 'Smiles1': 'O=C(O)[C@@H]1CCC(O)=N1', 'Smiles2': 'CCOC(=O)C1CCC(O)=N1'}, {'USI1': 'mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB00010125637', 'USI2': 'mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB00010106370', 'Smiles1': 'COc1cc(C(=O)O)ccc1O', 'Smiles2': 'CCOC(=O)c1ccc(O)c(OC)c1'}, {'USI1': 'mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB00010125095', 'USI2': 'mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB00010120285', 'Smiles1': 'O=C(O)c1cc(O)c(O)c(O)c1', 'Smiles2': 'CCOC(=O)c1cc(O)c(O)c(O)c1'}, {'USI1': 'mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB00010122676', 'USI2': 'mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB00010108770', 'Smiles1': 'COc1cc(C=O)ccc1O', 'Smiles2': 'COc1cc(C=O)ccc1OC(C)C'}, {'USI1': 'mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB00010122675', 'USI2': 'mzspec:GNPS:BERKELEY-LAB:accession:CCMSLIB00010104696', 'Smiles1': 'COc1cc(C=O)ccc1O', 'Smiles2': 'CCCOc1ccc(C=O)cc1OC'}]\n",
+    "columns=[\"USI1\", \"Smiles1\", \"USI2\", \"Smiles2\"]\n",
+    "df = pd.DataFrame(myData, columns=[\"USI1\", \"Smiles1\", \"USI2\", \"Smiles2\"])\n",
+    "df"
    ]
   },
   {
